Combine the Unix and OS/2 fileacc.c code.  They are basically the same, and with two well placed ifdefs, they are the same.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60055 13f79535-47bb-0310-9956-ffa450edef68

--- a/file_io/os2/Makefile.in
+++ b/file_io/os2/Makefile.in
@@ -15,7 +15,7 @@ INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I.
 LIB=file.a
 
 OBJS=dir.o \
-	fileacc.o \
+	common.o \
 	filedup.o \
 	filestat.o \
 	open.o \
