First function removed from Unix MPM's and moved to a common file.  This work is not anywhere near finished, but the cleanup has begun at least. Had to make a couple of variables non-static, so a name change was required since they are now viewable from outside the library.  The advantage to this is code that is much easier to maintain into the future, because it is duplicated less often.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60068 13f79535-47bb-0310-9956-ffa450edef68

--- a/network_io/unix/Makefile.in
+++ b/network_io/unix/Makefile.in
@@ -52,6 +52,7 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
+inet_aton.o: inet_aton.c $(INCDIR)/apr_private.h
 poll.o: poll.c networkio.h $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_network_io.h $(INCDIR)/apr_general.h \
  $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
