--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -82,7 +82,7 @@ apr_hash.o: apr_hash.c $(INCDIR)/apr_private.h \
 apr_md5.o: apr_md5.c $(INCDIR)/apr_private.h $(INCDIR)/apr_md5.h \
  $(INCDIR)/apr_lib.h $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
- $(INCDIR)/apr_thread_proc.h
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_xlate.h
 apr_pools.o: apr_pools.c $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_portable.h $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_thread_proc.h \
