Add a new APR function.  This function basically lets a file masquerade as a socket so that we can poll on it.  This is not my favorite idea, but since some platforms don't allow us to poll files and some do, we have to find a happy medium, this is it.  :-|
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60095 13f79535-47bb-0310-9956-ffa450edef68

--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -66,6 +66,14 @@
 #define APR_HAS_XLATE             @iconv@
 #define APR_HAS_OTHER_CHILD       @oc@
 
+/* Any time a file and socket are represented as the same type, this macro
+ * should be true.  I don't know of any platforms using Autoconf where this
+ * isn't true (OS/2? maybe), but I know it isn't true for Windows.  For right
+ * now, just define it as 1, and Windows will define it correctly, if this
+ * turns out to not work, we can devise an Autoconf test for it later.  rbb
+ */
+#define APR_FILES_AS_SOCKETS      1
+
 /* Typedefs that APR needs. */
 
 typedef  @short_value@           ap_int16_t;
