Clean up the files_as_sockets commit from yesterday.  I am using the hints file to determine if a platform supports this.  Currently, only OS/2 and BeOS do not.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60099 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -554,7 +554,12 @@ msg=yes ] , [ have_in_addr="0"
 msg=no ])
 AC_MSG_RESULT([$msg])
 
+if test "x$file_as_socket" = "x" ; then
+    file_as_socket="1";
+fi
+
 AC_SUBST(have_in_addr)
+AC_SUBST(file_as_socket)
 
 APR_CHECK_GETHOSTBYNAME_NAS
 
