Mass update of API_IMPORT/EXPORT symbols TO APR_ symbols.   APR is -NOT- the Apache server, so the import/export declations   cannot use the same defined symbols.  Other minor changes
  API_THREAD_PROC is now APR_THREAD_PROC.

  API_VAR_IMPORT/EXPORT are now APR_IMPORT/EXPORT_VAR, to allow
  easier grepping.

  The new compilation switches APR_STATIC and APR_EXPORT_SYMBOLS
  allow the builder to select either static linked or the creation
  of the export symbols for APR.  The aprlib and aprlibdll .dsp
  projects now include the later symbol.

  More cleanups from recent commits are still needed, as well as
  a thorough review of the distinction between APR_EXPORT and
  APR_EXPORT_NONSTD.  The later is used only for pure __cdecl
  required functions, such as variable arguments (not va array
  arguments, those are not an issue.)


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60101 13f79535-47bb-0310-9956-ffa450edef68

--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -93,11 +93,11 @@ typedef  @off_t_value@           ap_off_t;
 
 /* Definitions that APR programs need to work properly. */
 
-#define API_THREAD_FUNC
-#define API_EXPORT(type)         type
-#define API_EXPORT_NONSTD(type)  type
-#define API_VAR_IMPORT           extern
-#define API_VAR_EXPORT           
+#define APR_THREAD_FUNC
+#define APR_EXPORT(type)         type
+#define APR_EXPORT_NONSTD(type)  type
+#define APR_IMPORT_VAR           extern
+#define APR_EXPORT_VAR
 
 /* Define APR_SSIZE_T_FMT.  
  * If ssize_t is an integer we define it to be "d",
