PR: Obtained from: Submitted by: Reviewed by:
  Fix the last of the tags APR_EXPORT_VAR and APR_IMPORT_VAR to the
  accepted APR_VAR_EXPORT and APR_VAR_IMPORT.  This patch finally
  includes the apr.h.in file (newly added to my grepper).


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60111 13f79535-47bb-0310-9956-ffa450edef68

--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -96,8 +96,8 @@ typedef  @off_t_value@           ap_off_t;
 #define APR_THREAD_FUNC
 #define APR_EXPORT(type)         type
 #define APR_EXPORT_NONSTD(type)  type
-#define APR_IMPORT_VAR           extern
-#define APR_EXPORT_VAR
+#define APR_VAR_IMPORT           extern
+#define APR_VAR_EXPORT
 
 /* Define APR_SSIZE_T_FMT.  
  * If ssize_t is an integer we define it to be "d",
