Fix building with DSO support.  If any module is configured to be compiled for shared support then APR_HAS_DSO is enabled and -ldl is added to the LIBS variable.  -ldl may need to be modified based on platform.  If no modules are designated as shared then APR_HAS_DSO is disabled and nothing is added to LIBS.  In basic testing this compiled without errors or warnings.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60122 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -317,6 +317,22 @@ AC_SUBST(ssize_t_value)
 AC_SUBST(ssize_t_fmt) 
 AC_SUBST(off_t_fmt) 
 
+dnl #----------------------------- Checking for DSO support
+echo $ac_n "${nl}Checking for DSO...${nl}"
+AC_CACHE_CHECK([for DSO support], ac_cv_enable_dso,
+  [ AC_ARG_ENABLE(dso,
+    [  --enable-dso              Enable reliable child processes ],
+    [ ac_cv_enable_dso=$enableval],
+    [ aprdso="1" ] ) ] )
+
+if test "$ac_cv_enable_dso" = "no"; then
+    aprdso="0"
+else
+    aprdso="1"
+fi
+
+AC_SUBST(aprdso)
+
 dnl #----------------------------- Checking for Threads
 echo $ac_n "${nl}Checking for Threads...${nl}"
 AC_CACHE_CHECK([for threads], ac_cv_enable_threads,
