--- a/configure.in
+++ b/configure.in
@@ -319,11 +319,11 @@ AC_SUBST(off_t_fmt)
 
 dnl #----------------------------- Checking for DSO support
 echo $ac_n "${nl}Checking for DSO...${nl}"
-AC_CACHE_CHECK([for DSO support], ac_cv_enable_dso,
-  [ AC_ARG_ENABLE(dso,
-    [  --enable-dso              Enable reliable child processes ],
-    [ ac_cv_enable_dso=$enableval],
-    [ aprdso="1" ] ) ] )
+AC_ARG_ENABLE(dso,
+  [  --enable-dso              Enable reliable child processes ],
+  [ ac_cv_enable_dso=$enableval],
+  [ AC_CACHE_CHECK([for DSO support], ac_cv_enable_dso,
+    [ac_cv_enable_dso="yes"] ) ] )
 
 if test "$ac_cv_enable_dso" = "no"; then
     aprdso="0"
