BeOS doesn't have a native MMAp, but there the ap_mmap functions have been written and work just fine.  This allows us to tell APR that this is the case and have the APR_HAS_MMAP flag set accordingly.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60138 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -94,6 +94,7 @@ case "$OS" in
        CFLAGS="$CFLAGS -DBEOS"
        enable_apr_threads="system_threads"
        config_subdirs="shmem/unix/mm"
+       native_mmap_emul="1"
        ;;
    *)
        OSDIR="unix"
@@ -406,6 +407,8 @@ dnl #----------------------------- Checking for MMAP
 echo $ac_n "${nl}Checking for MMAP...${nl}"
 AC_FUNC_MMAP
 if test "$ac_cv_func_mmap_fixed_mapped" = "yes"; then
+    mmap="1"
+elif test "$native_mmap_emul" = "1"; then
     mmap="1"
 else
     mmap="0"
