I've had better thoughts about this.  APR needs to be configurable.  If Apache doesn't want to use this feature, then fine.  However APR should have the ability to be compiled without DSO support.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60144 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -319,7 +319,16 @@ AC_SUBST(off_t_fmt)
 
 dnl #----------------------------- Checking for DSO support
 echo $ac_n "${nl}Checking for DSO...${nl}"
-AC_CHECK_LIB(dl, dlopen, aprdso="1", apr_dso="0")
+AC_ARG_ENABLE(dso,
+  [  --enable-dso              Enable reliable child processes ],
+  [ tempdso=$enableval],
+  [ AC_CHECK_LIB(dl, dlopen, tempdso="yes", tempdso="no") ] )
+
+if test "$tempdso" = "no"; then
+    aprdso="0"
+else
+    aprdso="1"
+fi
 
 AC_SUBST(aprdso)
 
