Add the resource limiting code back to Apache 2.0.  This only works on Unix because I can't find any other platforms with rlimit.  If there are other platforms that need this code, then some of the code needs to move. This has just barely been tested, so it could probably use some good testing.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60147 13f79535-47bb-0310-9956-ffa450edef68

--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -51,6 +51,7 @@
 #define APR_HAVE_INET_ADDR      @inet_addr@
 #define APR_HAVE_INET_NETWORK   @inet_network@
 #define APR_HAVE_UNION_SEMUN    @have_union_semun@
+#define APR_HAVE_STRUCT_RLIMIT  @struct_rlimit@
 
 #if APR_HAVE_SYS_TYPES_H
 #include <sys/types.h>
