--- a/configure.in
+++ b/configure.in
@@ -401,6 +401,24 @@ AC_ARG_ENABLE(other-child,
   
 AC_SUBST(oc) 
 
+AC_MSG_CHECKING(struct rlimit)
+AC_TRY_RUN([#include <sys/resource.h>
+main()
+{
+    struct rlimit limit;
+    limit.rlim_cur = 0;
+    limit.rlim_max = 0;
+    exit(0);
+}], [
+    struct_rlimit="1"
+    AC_MSG_RESULT(yes) ], [
+    struct_rlimit="0"
+    AC_MSG_RESULT(no) ], [
+    struct_rlimit="0"
+    AC_MSG_RESULT(no) ] )
+
+AC_SUBST(struct_rlimit)
+
 dnl #----------------------------- Checking for MMAP 
 echo $ac_n "${nl}Checking for MMAP...${nl}"
 AC_FUNC_MMAP
