Remove waitpid from the config checks and all calls to waitpid from the server.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60157 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -409,6 +409,9 @@ AC_SUBST(threads)
 
 dnl #----------------------------- Checking for Processes
 echo $ac_n "${nl}Checking for Processes...${nl}"
+
+AC_CHECK_FUNCS(waitpid)
+
 AC_ARG_ENABLE(other-child,
   [  --enable-other-child    Enable reliable child processes ],
   [ if test "$enableval" = "yes"; then
