Get FreeBSD building again with the resource limiting changes (FreeBSD 3.4, at least).
rlim_t is defined in <sys/types.h>, so we usually need that.

Some stuff in <sys/resource.h> needs <sys/time.h> for timeval just to
be able to compile :(


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60161 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -424,7 +424,10 @@ AC_ARG_ENABLE(other-child,
 AC_SUBST(oc) 
 
 AC_MSG_CHECKING(struct rlimit)
-AC_TRY_RUN([#include <sys/resource.h>
+AC_TRY_RUN([
+#include <sys/types.h>
+#include <sys/time.h>
+#include <sys/resource.h>
 main()
 {
     struct rlimit limit;
