--- a/configure.in
+++ b/configure.in
@@ -68,7 +68,7 @@ AC_ARG_WITH(optim,[  --with-optim="FLAGS"      compiler optimisation flags],
 AC_ARG_WITH(debug,[  --with-debug            Turn on debugging and compile time warnings],
         [if test "$GCC" = "yes"; then CFLAGS="$CFLAGS -g -Wall"; else CFLAGS="$CFLAGS -g"; fi])
 
-AC_ARG_WITH(maintainer-mode,[  --with-maintainer-mode   Turn on debugging and compile time warnings],
+AC_ARG_WITH(maintainer-mode,[  --with-maintainer-mode  Turn on debugging and compile time warnings],
         [if test "$GCC" = "yes"; then CFLAGS="$CFLAGS -g -Wall -Wmissing-prototypes -Wstrict-prototypes -Wmissing-declarations"; else CFLAGS="$CFLAGS -g"; fi])
 
 dnl # this is the place to put specific options for platform/compiler
@@ -339,7 +339,7 @@ AC_SUBST(have_strstr)
 dnl #----------------------------- Checking for DSO support
 echo $ac_n "${nl}Checking for DSO...${nl}"
 AC_ARG_ENABLE(dso,
-  [  --enable-dso              Enable reliable child processes ],
+  [  --enable-dso            Enable dso support ],
   [ tempdso=$enableval],
   [ AC_CHECK_LIB(dl, dlopen, tempdso="yes", tempdso="no") ] )
 
