--- a/configure.in
+++ b/configure.in
@@ -395,7 +395,12 @@ echo $ac_n "${nl}Checking for DSO...${nl}"
 AC_ARG_ENABLE(dso,
   [  --enable-dso            Enable dso support ],
   [ tempdso=$enableval],
-  [ AC_CHECK_LIB(dl, dlopen, tempdso="yes", tempdso="no") ] )
+  [ 
+    AC_CHECK_LIB(dl, dlopen, tempdso="yes", tempdso="no")
+    if test "$tempdso" = "no"; then
+      AC_CHECK_FUNCS(dlopen, [ tempdso="yes" ], [ tempdso="no" ])
+    fi
+  ] )
 
 if test "$tempdso" = "no"; then
     aprdso="0"
