--- a/dso/unix/Makefile.in
+++ b/dso/unix/Makefile.in
@@ -51,6 +51,6 @@ depend:
 dso.o: dso.c dso.h $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_time.h $(INCDIR)/apr_thread_proc.h \
- $(INCDIR)/apr_dso.h
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_tables.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_dso.h
