--- a/mmap/unix/Makefile.in
+++ b/mmap/unix/Makefile.in
@@ -49,17 +49,19 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-common.o: common.c mmap_h.h ../../include/apr_private.h \
- ../../include/apr_general.h ../../include/apr.h \
- ../../include/apr_errno.h ../../include/apr_mmap.h \
- ../../include/apr_network_io.h ../../include/apr_file_io.h \
- ../../include/apr_time.h ../../include/apr_portable.h \
- ../../include/apr_thread_proc.h ../../include/apr_lock.h \
- ../../file_io/unix/fileio.h ../../include/apr_lib.h
-mmap.o: mmap.c mmap_h.h ../../include/apr_private.h \
- ../../include/apr_general.h ../../include/apr.h \
- ../../include/apr_errno.h ../../include/apr_mmap.h \
- ../../include/apr_network_io.h ../../include/apr_file_io.h \
- ../../include/apr_time.h ../../include/apr_portable.h \
- ../../include/apr_thread_proc.h ../../include/apr_lock.h \
- ../../file_io/unix/fileio.h ../../include/apr_lib.h
+common.o: common.c mmap_h.h $(INCDIR)/apr_private.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
+ $(INCDIR)/apr_errno.h $(INCDIR)/apr_mmap.h \
+ $(INCDIR)/apr_network_io.h $(INCDIR)/apr_file_io.h \
+ $(INCDIR)/apr_time.h $(INCDIR)/apr_portable.h \
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_lock.h \
+ ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h \
+ $(INCDIR)/apr_tables.h
+mmap.o: mmap.c mmap_h.h $(INCDIR)/apr_private.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
+ $(INCDIR)/apr_errno.h $(INCDIR)/apr_mmap.h \
+ $(INCDIR)/apr_network_io.h $(INCDIR)/apr_file_io.h \
+ $(INCDIR)/apr_time.h $(INCDIR)/apr_portable.h \
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_lock.h \
+ ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h \
+ $(INCDIR)/apr_tables.h
