--- a/configure.in
+++ b/configure.in
@@ -95,10 +95,12 @@ case "$OS" in
        enable_apr_threads="system_threads"
        config_subdirs="shmem/unix/mm"
        native_mmap_emul="1"
+       USE_MM=yes
        ;;
    *)
        OSDIR="unix"
        config_subdirs="shmem/unix/mm"
+       USE_MM=yes
        ;;
 esac
 
@@ -108,10 +110,12 @@ echo $ac_n "${nl}Checking for Shared Memory Support...${nl}"
 # run the MM config script regardless of whether we are going to use
 # it or not.  When we have a much better idea of who is using MM, we can
 # run this on a more conditional basis.
-USE_MM=yes
 mm_dir=shmem/unix/mm
-APR_PREPARE_MM_DIR
-RUN_SUBDIR_CONFIG_NOW($config_subdirs)
+
+if test "$USE_MM" = "yes"; then
+  APR_PREPARE_MM_DIR
+  RUN_SUBDIR_CONFIG_NOW($config_subdirs)
+fi
 
 AC_MSG_CHECKING(Checking for Shared memory support)
 AC_ARG_ENABLE(shmem,
