--- a/configure.in
+++ b/configure.in
@@ -96,6 +96,7 @@ case "$OS" in
        config_subdirs="shmem/unix/mm"
        native_mmap_emul="1"
        USE_MM=yes
+       AC_CHECK_DEFINE(BONE_VERSION, sys/socket.h)
        ;;
    *)
        OSDIR="unix"
@@ -405,7 +406,10 @@ AC_ARG_ENABLE(dso,
     if test "$tempdso" = "no"; then
       AC_CHECK_FUNCS(dlopen, [ tempdso="yes" ], [ tempdso="no" ])
     fi
-  ] )
+     if test "$tempdso" = "no"; then
+        AC_CHECK_LIB(root, load_image, tempdso="yes", tempdso="no")
+    fi
+ ] )
 
 if test "$tempdso" = "no"; then
     aprdso="0"
@@ -426,6 +430,7 @@ AC_CACHE_CHECK([for threads], ac_cv_enable_threads,
                    [ ac_cv_enable_threads="no" ] ) ] ) ] )
 
 if test "$ac_cv_enable_threads" = "no"; then
+echo "Don't enable threads"
     threads="0"
     pthreadh="0"
 else
@@ -441,8 +446,8 @@ else
           threads="0"
           pthreadh="0" ] )
     elif test "$enable_apr_threads" = "system_threads"; then
-          threads="1"
-          pthreadh="0"
+        threads="1"
+        pthreadh="0"
     else
 # We basically specified that we wanted threads, but not how to implement
 # them.  In this case, just look for pthreads.  In the future, we can check
@@ -457,14 +462,15 @@ else
     fi
 fi
 
-APR_CHECK_PTHREAD_GETSPECIFIC_TWO_ARGS
-APR_CHECK_PTHREAD_ATTR_GETDETACHSTATE_ONE_ARG
+if test "$pthreads" = "1"; then
+    APR_CHECK_PTHREAD_GETSPECIFIC_TWO_ARGS
+    APR_CHECK_PTHREAD_ATTR_GETDETACHSTATE_ONE_ARG
+fi
 
 ac_cv_define_READDIR_IS_THREAD_SAFE=no
-AC_CHECK_LIB(c_r, readdir, AC_DEFINE(READDIR_IS_THREAD_SAFE))
-
 if test "$threads" = "1"; then
     echo "APR will use threads"
+    AC_CHECK_LIB(c_r, readdir, AC_DEFINE(READDIR_IS_THREAD_SAFE))
 else
     echo "APR will be non-threaded"
 fi
