Add -Kthread for ReliantUNIX
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60206 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -74,12 +74,17 @@ AC_ARG_WITH(maintainer-mode,[  --with-maintainer-mode  Turn on debugging and com
 dnl # this is the place to put specific options for platform/compiler
 dnl # combinations
 case "$OS:$CC" in
-    *-hp-hpux*:cc ) CFLAGS="$CFLAGS -Ae +DAportable" ;;
+    *-hp-hpux*:cc )
+	CFLAGS="$CFLAGS -Ae +DAportable"
+	;;
     powerpc-*-beos:mwcc* )
         CPP="mwcc -E"
         CC="mwcc"
         AR="ar"
         ;;
+    mips-sni-sysv4:cc )
+	CFLAGS="$CFLAGS -Kthread"
+	;;
 esac
 
 case "$OS" in
