Fix the OS/390 build. Submitted by:	Greg Ames <gregames@raleigh.ibm.com>
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60245 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -459,7 +459,7 @@ else
     fi
 fi
 
-if test "$pthreads" = "1"; then
+if test "$pthreadh" = "1"; then
     APR_CHECK_PTHREAD_GETSPECIFIC_TWO_ARGS
     APR_CHECK_PTHREAD_ATTR_GETDETACHSTATE_ONE_ARG
 fi
