FreeBSD's <netinet/in.h> needs <sys/types.h> explicitly included first.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60247 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -626,6 +626,7 @@ dnl #----------------------------- Checking for Networking Support
 echo $ac_n "${nl}Checking for Networking support...${nl}"
 AC_MSG_CHECKING(looking for in_addr in netinet/in.h)
 AC_TRY_COMPILE([
+#include <sys/types.h>
 #include <netinet/in.h>
 ],[
 struct in_addr arg;
