--- a/configure.in
+++ b/configure.in
@@ -422,9 +422,8 @@ AC_CACHE_CHECK([for threads], ac_cv_enable_threads,
   [ AC_ARG_ENABLE(threads,
     [  --enable-threads        Enable threading support in APR.],
     [ ac_cv_enable_threads=$enableval] ,
-    [ AC_CHECK_HEADERS(pthread.h,
-                   [ ac_cv_enable_threads="pthread" ] ,
-                   [ ac_cv_enable_threads="no" ] ) ] ) ] )
+    [ CHECK_PTHREADS_H([ ac_cv_enable_threads="pthread" ] ,
+                       [ ac_cv_enable_threads="no" ] ) ] ) ] )
 
 if test "$ac_cv_enable_threads" = "no"; then
 echo "Don't enable threads"
@@ -436,7 +435,7 @@ else
 # We have specified pthreads for our threading library, just make sure
 # that we have everything we need
       PTHREADS_CHECK
-      AC_CHECK_HEADERS(pthread.h, [
+      CHECK_PTHREADS_H([
           threads="1"
           pthreadh="1"
           AC_DEFINE(USE_THREADS) ], [
@@ -450,7 +449,7 @@ else
 # them.  In this case, just look for pthreads.  In the future, we can check
 # for other threading libraries as well.
       PTHREADS_CHECK
-      AC_CHECK_HEADERS(pthread.h, [
+      CHECK_PTHREADS_H([
           threads="1"
           pthreadh="1"
           AC_DEFINE(USE_THREADS) ], [
