--- a/configure.in
+++ b/configure.in
@@ -110,6 +110,10 @@ case "$OS" in
        ;;
 esac
 
+if test $enable_apr_threads="system_threads"; then
+    ac_cv_enable_threads="yes"
+fi
+
 dnl #----------------------------- Checking for Shared Memory Support 
 echo $ac_n "${nl}Checking for Shared Memory Support...${nl}"
 
