Repair the logic to detect whether we have sendfile support.  After the previous change, only send_file was supported.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60257 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -205,7 +205,8 @@ dnl Checks for library functions. (N.B. poll is further down)
 AC_CHECK_FUNCS(strcasecmp stricmp setsid nl_langinfo)
 AC_CHECK_FUNCS(sigaction, [ have_sigaction="1" ], [ have_sigaction="0" ]) 
 AC_CHECK_FUNCS(writev)
-AC_CHECK_FUNCS(sendfile send_file, [ sendfile="1" ], [ sendfile="0" ])
+sendfile="0"
+AC_CHECK_FUNCS(sendfile send_file, [ sendfile="1" ])
 AC_CHECK_FUNCS(fork, [ fork="1" ], [ fork="0" ])
 AC_CHECK_FUNCS(getpass)
 AC_CHECK_FUNC(inet_addr, [ inet_addr="1" ], [ inet_addr="0" ])
