Fix some shell logic in a recent commit which caused APR thread support to be inadvertently enabled in some Unix configurations (like prefork).
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60258 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -110,8 +110,8 @@ case "$OS" in
        ;;
 esac
 
-if test $enable_apr_threads="system_threads"; then
-    ac_cv_enable_threads="yes"
+if test "$enable_apr_threads" = "system_threads"; then
+   ac_cv_enable_threads="yes"
 fi
 
 dnl #----------------------------- Checking for Shared Memory Support 
