Detect libraries based on which platform configure is being run on.
Basically, Apache now runs APR's configure script first.  APR's configure
script has been setup to create a new file, APRVARS.  APRVARS is basically
all of the environment variables that APR wants to export to the program
that is using it.  This allows the calling program to "source" APRVARS
and get those environment variables.

Removed hack to make platforms use -ldl.


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60268 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -60,6 +60,7 @@ distclean: subdirs_distclean
 	-$(RM) -f *.o *.a *.so
 	-$(RM) -f config.cache config.status config.log configure
 	-$(RM) -f Makefile
+	-$(RM) -f APRVARS
 	-$(RM) -rf objs
 	cd test; $(MAKE) distclean; cd ..
 
