--- a/configure.in
+++ b/configure.in
@@ -404,7 +404,8 @@ AC_ARG_ENABLE(dso,
   [  --enable-dso            Enable dso support ],
   [ tempdso=$enableval],
   [ 
-    AC_CHECK_LIB(dl, dlopen, tempdso="yes", tempdso="no")
+    AC_CHECK_LIB(dl, dlopen, [ tempdso="yes" LIBS="$LIBS -ldl" ], 
+                 tempdso="no")
     if test "$tempdso" = "no"; then
       AC_CHECK_FUNCS(dlopen, [ tempdso="yes" ], [ tempdso="no" ])
     fi
@@ -650,6 +651,8 @@ AC_SUBST(file_as_socket)
 APR_CHECK_GETHOSTBYNAME_NAS
 
 dnl #----------------------------- Construct the files
+APR_OUTPUT_VARS
+
 AC_SUBST(LDLIBS)
 AC_SUBST(OPTIM)
 AC_SUBST(RANLIB)
