--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -68,6 +68,8 @@
 #define APR_HAVE_STRNCASECMP    @have_strncasecmp@
 #define APR_HAVE_STRDUP         @have_strdup@
 #define APR_HAVE_STRSTR         @have_strstr@
+#define APR_HAVE_MEMMOVE        @have_memmove@
+#define APR_HAVE_BCOPY          @have_bcopy@
 
 #if APR_HAVE_SYS_TYPES_H
 #include <sys/types.h>
