Change the check for bcopy to bzero, and the associated macros. Submitted by:	Greg Stein
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60275 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -220,7 +220,7 @@ if test "$native_mmap_emul" = "1"; then
 fi
 AC_CHECK_FUNCS(hstrerror)
 AC_CHECK_FUNCS(memmove, [ have_memmove="1" ], [have_memmove="0" ])
-AC_CHECK_FUNCS(bcopy, [ have_bcopy="1" ], [ have_bcopy="0"] )
+AC_CHECK_FUNCS(bzero, [ have_bzero="1" ], [ have_bzero="0"] )
 
 AC_SUBST(sendfile)
 AC_SUBST(fork)
